fluxcd/infrastructure/configs/overlays/production/istio-policies/delivery-bag/allow-intra-namespace.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-intra-namespace
spec:
  action: ALLOW
  rules:
    - from:
        - source:
            namespaces: ["delivery-bag"]
      to:
        - operation: {}
